feat: enhance security, realtime SSE stream, cascade deletions, and automated payment proof cleanup - Implement PaymentProofCleanupScheduler to auto-delete 30-day-old proof images from Supabase - Permit SSE /realtime/stream in SecurityConfig for seamless real-time notifications - Fix product deletion by cascading wishlist, reviews, order item references, and Supabase image cleanup - Add single and bulk order purge capabilities with automated inventory restock - Add DB migrations for payment method & address type standardization